# seameshkit

./: README.md  pyproject.toml
seameshkit/: _core.py  _mappings.py  _utils.py  extract_contours.py  norm.py
seameshkit/_io/: __init__.py  gmsh.py  schism.py  telemac.py  ugrid.py  ww3.py
tests/: test_convert.py
tests/data/: out_azov_0.3.msh
